# fltkhs-media-player

./: .gitignore  README.org  README.txt  Setup.hs  fltkhs-media-player.cabal  osx-build.sh  osx-run.sh  stack.yaml  win64-build.sh  win64-run.sh
src/: MediaPlayer.fl  UI.hs  Vlc.chs  media-player.hs
