name : fltkhs-media-player
version : 0.0.0.1
synopsis : Fltkhs Fluid template project
description:
    Starter kit for an FLTKHS Fluid project
license : MIT
license-file : LICENSE
author : Aditya Siram
build-type: Custom
maintainer: aditya.siram@gmail.com
homepage: http://github.com/deech/fltkhs-fluid-hello-world
category: UI,Graphics
cabal-version: >=1.24
extra-source-files: MediaPlayer.fl
source-repository head
  type: git
  location: http://github.com/deech/fltkhs-fluid-hello-world

Flag FastCompile
   Description: Turn off optimizations for faster compilation
   Manual: True
   Default: False

Library
    Hs-Source-Dirs: src/
    Exposed-Modules: Vlc
    if os(darwin)
       Include-Dirs: ./libvlc-sdk/include
       Extra-Libraries: vlc
       cc-options: -U__BLOCKS__ -D_Nonnull=
    else
       if os(windows)
         Extra-Libraries: vlc
       else
         Pkgconfig-Depends: libvlc >= 0.29.0
    Default-Language: Haskell2010
    Build-Depends: base == 4.*,
                   fltkhs >= 0.5.4.0,
                   text >= 0.2 && < 1.3,
                   process >= 1.4.3.0

Executable fltkhs-media-player-exe
  Main-Is: media-player.hs
  Other-modules:
    MediaPlayer
    UI
  build-tools: c2hs
  Hs-Source-Dirs: src/
  Build-Depends:
    base == 4.*,
    fltkhs >= 0.5.4.0,
    text >= 0.2 && < 1.3,
    process >= 1.4.3.0,
    fltkhs-media-player == 0.0.0.1
  default-language: Haskell2010
  ghc-Options: -Werror -threaded
  include-dirs: ./src
  if impl(ghc >= 7.10) && flag(FastCompile)
     ghc-Options: -O0
  if os(windows)
   ghc-Options: -optl-mwindows
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
  if os(darwin)
   ghc-Options: "-optl-Wl,-lfltkc"
  if !os(darwin) && !os(windows)
   ghc-Options: -pgml g++ "-optl-Wl,--allow-multiple-definition" "-optl-Wl,--whole-archive" "-optl-Wl,-Bstatic" "-optl-Wl,-lfltkc" "-optl-Wl,-Bdynamic" "-optl-Wl,--no-whole-archive"
